8226514: Replace wildcard address with loopback or local host in tests - part 14
Improve test stabilty by getting rid of the wildcard address whenever possible.

Reviewed-by: chegar, vtewari